2007-11-23  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * added olmar/BUILDING

        Olmar
        * more renaming fixes
        * everything fixed for the elsa variant restrictions: regression
          tests pass
        * backward translation in ast_config
        * gen_superast generates a superast match template

        wiki_bot
        * runs fine, the mozilla wiki is up-to-date

        cfg/modelcheck
        * adoptions

2007-11-21  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Olmar
        * fixed some renaming problems
        * elsa variant restriction: variants have at most two fields (+ annot)
        * added renamings for the elsa ast

2007-11-20  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * variant type restriction implemented: everything with more than
          2 fields becomes a record
        * bootstrap astgen_or

        * makefile fixes

        * configure scripts for olmar and the root dir

2007-11-19  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * various makefile fixes (stop on error, building bytecode)

        Olmar
        * fix sharing bug (for string option)
        * C++ addresses are not shifted any more (passed as nativeint)
        * fix dot_graph bug with reflexive nodes 
        * preserve string sharing in the ast
        * make ast ids independent of the memory layout of the ast (visit
          members in a scope in alphabetical order)
        * label special constructors in ast graph
        * make all scopes special in ast graph generation
        
        CFG
        * inherited constructors
        * constructors/destructors of temporaries
        * color missing functions in red
        * -fun <func> for the callgraph of func
        

2007-10-30  Hendrik Tews  <tews@tandem.cs.ru.nl>

        CFG / Modelcheck
        * adopted to olmar v2

        Olmar
        * new reflection method:
          - create first an empty ocaml object and register it in the
            reflection value hash