@@ -1,0 +1,11 @@
+// conversions
+
+short f(short s) {
+  long l;
+  l = s;
+  return l;
+}
+
+long g(long l) {
+  return f(l);
+}
